[refactor] remove isAdmin, add user edit occupation
