# src/main/kotlin/com/arekalov/blps/dto/user/UpdateUserRequest.kt
@@ -1,18 +1,19 @@
-package com.arekalov.blps.dto.auth
+package com.arekalov.blps.dto.user
 
+import com.arekalov.blps.model.enum.UserRole
 import jakarta.validation.constraints.Email
-import jakarta.validation.constraints.NotBlank
 import jakarta.validation.constraints.Size
 
-data class RegisterRequest(
-    @field:NotBlank(message = "Email cannot be blank")
+data class UpdateUserRequest(
     @field:Email(message = "Invalid email format")
     @field:Size(max = 255, message = "Email must not exceed 255 characters")
-    val email: String,
-    @field:NotBlank(message = "Password cannot be blank")
+    val email: String? = null,
+
     @field:Size(min = 6, max = 100, message = "Password must be between 6 and 100 characters")
-    val password: String,
-    @field:NotBlank(message = "Company name cannot be blank")
+    val password: String? = null,
+
     @field:Size(max = 255, message = "Company name must not exceed 255 characters")
-    val companyName: String,
+    val companyName: String? = null,
+
+    val role: UserRole? = null,
 )
